examples/test/testpolicy2692.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2692
  namespace: namespace398
spec:
  podSelector:
    matchLabels:
      key10: value20
      key49: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value39
          key18: value33
          key48: value23
      podSelector:
        matchLabels:
          key0: value25
          key18: value45
